@@ -160,13 +160,13 @@ return a string, possibly an icon."
   "Minimum length of prefix for auto completion.
 The completion backend can override this with
 :company-prefix-length.  It is *not recommended* to use a small
-value here (below 2), since this will create high load for
+prefix length (below 2), since this will create high load for
 Emacs.  See also `corfu-auto-delay'."
   :type 'natnum)
 
 (defcustom corfu-auto-delay 0.2
   "Delay for auto completion.
-It is *not recommended* to use a very small value or even 0,
+It is *not recommended* to use a very small delay or even 0,
 since this will create high load for Emacs in particular if the
 completion backend in use is expensive."
   :type 'float)
