@@ -5,6 +5,9 @@
 * Development
 
 - Drop obsolete =corfu-preselect-first=.
+- =corfu-popupinfo-delay= and =corfu-echo-delay=: Remove support for value =t=.
+  Instant updates are not recommended. It is still possible to use a small value
+  for the delay.
 
 * Version 0.35 (2023-02-17)
 
